2018-01-25  Ryan Haddad  <ryanhaddad@apple.com>

        Cherry-pick r227260. rdar://problem/36837397

    2018-01-19  Andy Estes  <aestes@apple.com>

            [Sierra Debug WK2] ASSERTION FAILED: paymentCoordinator().supportsVersion(version)
            https://bugs.webkit.org/show_bug.cgi?id=181833

            Reviewed by Youenn Fablet.

            Moved the version 3 test into its own file that only runs on High Sierra and later.

            * http/tests/ssl/applepay/ApplePayRequestShippingContactV3.https-expected.txt: Added.
            * http/tests/ssl/applepay/ApplePayRequestShippingContactV3.https.html: Added.
            * platform/mac-wk2/TestExpectations:

2018-01-25  Ryan Haddad  <ryanhaddad@apple.com>

        Work towards rdar://problem/36837397.

        Unreviewed test gardening.

        * platform/mac/TestExpectations:

2018-01-25  Ryan Haddad  <ryanhaddad@apple.com>

        Work towards rdar://problem/36837397.

        Unreviewed test gardening.

        * platform/mac-elcapitan-wk2/fast/dom/navigator-detached-no-crash-expected.txt:
        * platform/mac-wk1/fast/dom/navigator-detached-no-crash-expected.txt:
        * platform/mac/TestExpectations:

2018-01-24  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r227581. rdar://problem/36846010

    2018-01-24  Youenn Fablet  <youenn@apple.com>

            Opaque being-loaded responses should clone their body
            https://bugs.webkit.org/show_bug.cgi?id=182056

            Reviewed by Brady Eidson.

            * http/wpt/service-workers/clone-opaque-being-loaded-response-worker.js: Added.
            * http/wpt/service-workers/clone-opaque-being-loaded-response.html: Added.
            * http/wpt/service-workers/clone-opaque-being-loaded-response.https-expected.txt: Added.
            * http/wpt/service-workers/resources/clone-opaque-being-loaded-response-iframe.html: Added.
            * http/wpt/service-workers/resources/lengthy-pass.py: Added.
            (main):
